Wed Jun 28 19:50:00 CEST 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation from comments received.

Wed Jun 28 00:04:40 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

 * lib/showcright.c: don't translate function-name in do_fd_copy call

Tue Jun 27 19:19:00 CEST 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation from comments received.

Sat Jun 17 21:57:00 CEST 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation.
  * THANKS: Updated my e-mail address.

Fri Jun 16 08:59:47 EDT 2000 Ben Collins <bcollins@debian.org>

  * main/depcon.c: really fixup versioned provides this time. basically we
    ignore the dvr_* of the provide, and use the version to decide if we
    want to use it to satisfy the dep
  * main/enquiry.c: ignore dvr_* type when checking for provides

Thu Jun 15 13:41:28 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * lib/parse.c: add Enhances to fieldinfos[]
  * lib/fields.c:
    + initialize dop->backrev as well when creating new dependency
    + only allow exact version relations when dealing with provides
  * TODO: remove versioned provides
  * debian/rules: don't fail of make clean fails (which happens on a
    cvsclean tree)

Thu Jun 15 10:09:03 EDT 2000 Ben Collins <bcollins@debian.org>

  * main/depcon.c: remove if() that prevented versioned deps from checking
    provides to satisfy them
  * dselect/pkgsublist.cc: Same

Tue Jun 13 22:11:22 CEST 2000 peter karlsson <peter@softwolves.pp.se>

  * po/sv.po: Updated Swedish translation

Tue Jun 13 19:23:37 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-statoverride.pl: 
    + fix two typos in the help message
    + Add code to implement --update when adding an override
  * scripts/dpkg-statoverride.8: new file
  * debian/dpkg.postinst: create statoverride file if it doesn't exist

Mon Jun 12 19:38:17 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
