@@ -13,6 +13,7 @@ dpkg (1.7.0) unstable; urgency=low
   * dpkg-deb: reorder files when building a package
   * dpkg-statoverride: new tool to override ownership and modes for files
   * Modify dpkg and dselect to allow versioned provides
+  * Check COLUMNS environment for dpkg -l output. Closes: Bug#65536
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
