@@ -1,3 +1,8 @@
+Tue Jul  4 17:29:06 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/enquiry.c: modify getttywidth() to check COLUMNS environment
+  * scripts/controllib.pl: remove warnings for LOGNAME stuff
+
 Wed Jun 28 19:50:00 CEST 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation from comments received.
